<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="no_account_sigin"><u>没有账号？点击注册</u></string>
    <string name="no_network_click_refresh">没有网络，点击刷新</string>
    <string name="app_name">小马过河</string>
    <string name="title_section1">英语一</string>
    <string name="title_section2">英语二</string>
    <string name="title_section3">政治</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="analysis">解析</string>
    <string name="source">来源</string>
    <string name="note">笔记</string>
    <string name="add_note">添加笔记</string>
    <string name="action_settings">设置</string>
    <string name="action_draft">Draft</string>
    <string name="action_answer_sheets">答题卡</string>
    <string name="action_timer">00:00</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit_answer">提交答案</string>
    <string name="title_activity_activity_papers">练习</string>
    <string name="predict_grade">预测分数</string>
    <string name="cn_grade">分</string>
    <string name="answer_sheets">答题卡</string>
    <string name="paper_name">练习名称</string>
    <string name="spend_time">完成用时</string>
    <string name="score">答对</string>
    <string name="cn_dao">道</string>
    <string name="respond_right">回答正确</string>
    <string name="respond_wrong">回答错误</string>
    <string name="paper_details">考试情况</string>
    <string name="title_activity_activity_paper_report">练习报告</string>
    <string name="wrong_book">错题本</string>
    <string name="wrong_test">错题练习</string>
    <string name="test_history">练习历史</string>
    <string name="note_question">笔记题目</string>
    <string name="history_zhenti">往年真题</string>
    <string name="user_cneter">个人中心</string>
    <string name="the_right_answer_is">正确答案是</string>
    <string name="all_check_analysis">全部解析</string>
    <string name="title_activity_activity_paper_analysis">解析</string>
    <string name="title_activity_activity_welcome">ActivityWelcome</string>
    <string name="phone_number">手机号码</string>
    <string name="login">登录</string>
    <string name="title_activity_activity_regist">注册</string>
    <string name="get_check_number">获取验证码</string>
    <string name="submit">提交</string>
    <string name="error_checkNumber">验证码错误</string>
    <string name="sure">确定</string>
    <string name="title_activity_activity_write_info">填写个人资料</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">生日</string>
    <string name="email">邮箱</string>
    <string name="type">类别</string>
    <string name="source_college">在读院校</string>
    <string name="source_major">在读专业</string>
    <string name="first_target_college">第一目标院校</string>
    <string name="second_target_college">第二目标院校</string>
    <string name="first_target_major">第一目标专业</string>
    <string name="second_target_major">第二目标专业</string>
    <string name="action_love">收藏</string>
    <string name="action_favorite_question">收藏题目</string>
    <string name="action_favorite_success">收藏成功</string>
    <string name="action_share">分享</string>
    <string name="title_activity_activity_note">笔记</string>
    <string name="title_activity_activity_error_book">错题本</string>
    <string name="title_activity_activity_error_test">错题练习</string>
    <string name="title_activity_activity_history_test">练习历史</string>
    <string name="title_activity_activity_history_office">往年真题</string>
    <string name="title_activity_activity_noted_questions">笔记题目</string>
    <string name="view">查看</string>
    <string name="title_activity_activity_error_questions">错题集</string>
    <string name="title_activity_activity_favorite_question">收藏的题目</string>
    <string name="title_activity_activity_favorite_questions">收藏的题目</string>
    <string name="cancle">取消</string>
    <string name="edit_note">编辑笔记</string>
    <string name="unfinish_paper">试卷未做完，确定提交试卷？</string>
    <string name="individuation_content">个性化推荐内容</string>
    <string name="title_activity_activity_individuation">推荐</string>
    <string name="title_activity_activity_personal">个人中心</string>
    <string name="chat">聊天</string>
    <string name="title_activity_activity_view_personal">用户资料</string>
    <string name="nick_name">昵称</string>
    <string name="account_number">账号</string>
    <string name="gender">性别</string>
    <string name="accepted_college">录取院校</string>
    <string name="accepted_major">录取专业</string>
    <string name="log_out">退出登录</string>
    <string name="about_me">个性签名</string>
    <string name="title_activity_activity_assessment">个人评估</string>
    <string name="general_comment">总体评价</string>
    <string name="regist">注册</string>
    <string name="wrong_phone_number">手机号错误</string>
    <string name="wrong_password">请输入至少6位密码</string>
    <string name="wrong_password_confirm">两次输入的密码不一致</string>
    <string name="registting">注册中...</string>
    <string name="registered">该手机号已被注册</string>
    <string name="register_succ">注册成功</string>
    <string name="registered_failed">注册失败，请重试</string>
    <string name="loading">加载中...</string>
    <string name="logining">登录中...</string>
    <string name="login_failed">登录失败，请重试</string>
    <string name="error_account">账号错误</string>
    <string name="error_password">密码错误</string>
    <string name="error_please_try_again">小马跑了，点击重试</string>
    <string name="no_network_try_again">网络异常，请重试</string>
    <string name="real_name">真实姓名</string>
    <string name="logoutting">退出中...</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="we_will_send_confirm_message_to_the_phone">我们将发送验证码短信到这个号码：</string>
    <string name="please_confirm_phone">请确认手机号</string>
    <string name="title_activity_activity_auth_code">确认短信验证码</string>
    <string name="sms_auth_code">短信验证码</string>
    <string name="select_photo">选择照片</string>
    <string name="action_skip">跳过</string>
    <string name="take_photo">拍摄照片</string>
    <string name="forget_password"><u>忘记密码</u></string>
    <string name="sigin">注册</string>
    <string name="error_retry">发生异常，请点击重试</string>
    <string name="no_note_question">还没有添加笔记</string>
    <string name="no_error_question">还没有错题</string>
    <string name="no_favorite_question">还没有收藏题目</string>
    <string name="error_book">错题本</string>
    <string name="favorite_book">收藏题目</string>
    <string name="note_book">笔记题目</string>
    <string name="error_test">错题测试</string>
    <string name="start_test">开始测试</string>
    <string name="politics">政治</string>
    <string name="english_1">英语一</string>
    <string name="english_2">英语二</string>
    <string name="action_more">更多</string>
    <string name="title_activity_activity_setting">设置</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="update_available">有新版本可供更新</string>
    <string name="update">更新</string>
    <string name="is_latest_version">当前版本为最新版本</string>
    <string name="title_activity_activity_forget_password">忘记密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="title_activity_selecte_course">选择科目</string>
    <string name="finished">完成</string>
    <string name="qq_login">使用QQ登录</string>
    <string name="weibo_login">使用微博登录</string>
    <string name="next_step">下一步</string>
    <string name="explain_about_register_auth_code">短信验证码已发送至：</string>
    <string name="set_password">设置密码</string>
    <string name="title_activity_register">注册</string>
    <string name="please_input_phone_numer">请输入手机号码</string>
    <string name="hint">提示</string>
    <string name="has_registered">已注册</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="password_length_mismatch_condition">密码长度过太短，请输入6位以上密码</string>
    <string name="network_error">网络发生错误，请重试</string>
    <string name="phone_number_mismatch_condition">号码无效</string>
    <string name="getting_courses">获取已选科目中...</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_course">小马过河</string>
    <string name="add_course">修改课程</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="parseing_questions">解析问题中...</string>
    <string name="title_activity_base_test">基础训练</string>
    <string name="title_activity_check_answer">练习结果</string>
    <string name="parseing_answer">解析答案中...</string>
    <string name="title_activity_show_analysis">题目解析</string>
    <string name="action_note">笔记</string>
    <string name="are_being_developed">正在开发中，敬请等待</string>
    <string name="zhen_ti_test">真题训练</string>
    <string name="special_test">专项训练</string>
    <string name="simulate_test">模拟训练</string>
    <string name="check_error">查看错题</string>
    <string name="check_note">查看笔记</string>
    <string name="check_favorite">查看收藏</string>
    <string name="basic_test">基础训练</string>
    <string name="your_answer">你的答案：</string>
    <string name="right_answer">正确答案：</string>
    <string name="getting_personal_info">获取个人信息中...</string>
    <string name="title_activity_show_recorded_que">ShowRecordedQueActivity</string>
    <string name="parse_failed">解析失败</string>
    <string name="show_error_question">错题：</string>
    <string name="show_favorite">收藏：</string>
    <string name="show_note">笔记：</string>
    <string name="pay_attention_on_sms">小马已经给您的手机发送了一条含有验证码的短信，请注意查收，并将验证码填在下方</string>
    <string name="unregistered">未注册</string>
    <string name="reset_password_success">修改密码成功</string>
    <string name="reset_password_failed">修改密码失败</string>
    <string name="right">正确</string>
    <string name="error">错误</string>
</resources>
