<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0e0e0"
    >

    <RelativeLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explain_about_register_auth_code"
            android:id="@+id/textView9" />

        <TextView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView_phone_number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_auth_code"
            android:id="@+id/textView10"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:textColorHighlight="@color/editTextHightLight"
            android:textColor="@color/editTextHightLight"
            android:textColorHint="@color/textColorHint"
            android:id="@+id/editText_auth_code_register"
            android:maxLength="6"
            android:layout_toRightOf="@id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password"
            android:id="@+id/textView11"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:textColorHighlight="@color/editTextHightLight"
            android:textColor="@color/editTextHightLight"
            android:textColorHint="@color/textColorHint"
            android:id="@+id/editText_password_register"
            android:inputType="textPassword"
            android:maxLength="6"
            android:layout_toRightOf="@id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button_register_submit"
        android:layout_gravity="center_horizontal" />


</LinearLayout>