<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:elevation="10dp"
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        android:titleTextAppearance="?android:attr/text"
        />

    <Button
        android:id="@+id/button_check_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin"
        android:background="@drawable/button_style"
        android:layout_alignParentBottom="true"
        android:text="@string/all_check_analysis"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ScrollView
        android:layout_below="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_check_analysis"
        android:fillViewport="true">
        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/view_margin_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/paper_name"/>

                <TextView
                    android:id="@+id/textView_paper_report_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="paper name"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/spend_time"/>

                <TextView
                    android:id="@+id/textView_paper_spend_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="Spend Time"/>
            </LinearLayout>

            <LinearLayout
                android:background="@color/holo_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_margin="2dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/score"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/grade_font_size"/>
                    <LinearLayout
                        android:layout_alignParentRight="true"
                        android:layout_alignBaseline="@id/textView_score"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cn_dao"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="/"/>
                        <TextView
                            android:id="@+id/textView_sum_questions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="5"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cn_dao"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_margin="2dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_sheets"/>

            <com.example.ustc_pc.myapplication.unit.ScrollViewWithGridView
                android:layout_margin="@dimen/view_margin"
                android:id="@+id/gridView_answer_sheets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:numColumns="4"
                android:verticalSpacing="@dimen/view_margin"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="@dimen/view_margin"
                    android:background="@color/transparency_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paper_details"/>

                <TextView
                    android:id="@+id/textView_paper_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>

