<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:hint="@string/pay_attention_on_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_marginTop="@dimen/view_margin"
        android:id="@+id/relativeLayout_auth_code"
        android:layout_below="@id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_auth_code"
            android:id="@+id/textView6"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_auth_code"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textView6"
            android:textColorHint="@color/textColorHint"
            android:textColorHighlight="@color/editTextHightLight"
            android:textColor="@color/editTextHightLight"
            />
    </RelativeLayout>

    <RelativeLayout

        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/relativeLayout_new_password"
        android:layout_below="@id/relativeLayout_auth_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:id="@+id/textView7"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_new_password"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textView7"
            android:textColorHint="@color/textColorHint"
            android:textColorHighlight="@color/editTextHightLight"
            android:textColor="@color/editTextHightLight"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/view_margin"
        android:id="@+id/relativeLayout_confirm_new_password"
        android:layout_below="@id/relativeLayout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:id="@+id/textView8"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_confirm_password"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textView8"
            android:textColorHint="@color/textColorHint"
            android:textColorHighlight="@color/editTextHightLight"
            android:textColor="@color/editTextHightLight"
            />
    </RelativeLayout>

    <Button
        android:layout_below="@id/relativeLayout_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/button_submit"
        android:background="@drawable/button_style"
        android:layout_margin="@dimen/activity_vertical_margin" />

</RelativeLayout>